# matter_framework

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  README.rst  VERSION  __init__.py  main.py  pyproject.toml  tox.ini
src/: analysis.py
src/experimental_data/data/: MANIFEST.txt  N_conservation_residual.csv  N_z2_MukhanovSasaki.csv  SHA256SUMS.txt  diagnostics.json  experimental_data_v411.npz  k_vs_Nstar.csv  k_vs_Pt.csv  k_vs_Pzeta_ring.csv  k_vs_consistency_ratio.csv  k_vs_consistency_target.csv  k_vs_n_t.csv  k_vs_nbar.csv  k_vs_ring_down_damping.csv  params.json
src/experimental_data/data/extended/: N_Hubble_rate.csv  N_conformal_time_eta.csv  N_epsH.csv  N_rho_ent.csv  N_w_ent.csv  SHA256SUMS.txt  k_vs_Pzeta_no_ring.csv  k_vs_r.csv  k_vs_scalar_tilt.csv
src/experimental_data/plots/: SHA256SUMS.txt
src/experimental_data/plots/extended/: SHA256SUMS.txt
src/modeling/: physics_model.py
src/utils/: file_system_utils.py  plot_utils.py
